# FastAPI-project

./: .gitignore  main.py  patients.json  pyproject.toml
authentication/: auth.py
