[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt<4.0.0",
    "fastapi>=0.135.3",
    "passlib[bcrypt]<3.2.0",
    "pydantic[email]>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
]
